--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,3 +21,9 @@ html, body {
 	background-color: #f4f4f4;
   margin-top: 30px;
 }
+.organization{
+	font-weight: bold;
+}
+.notification{
+	margin-top: -10px;
+}
