--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,9 +9,9 @@
 
           <%= fields_for( :tenant ) do |w| %>
           <div class="field">
-          <%= w.label :surname, 'Organization' %>
-          <span class='description'>(Unique name for your group or organization for the new account)</span>
-          <%= w.text_field :name, required: true, class: "" %>
+          <%= w.label :surname, '*Organization', class: "organization"%>
+          <%= w.text_field :name, required: true, class: "input", autofocus: true %>
+          <span class='description'> If you want to participate in more than one project this is mandatory</span>
           </div>
           <% end %>
           <div class="field">
