--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,14 +9,14 @@
 
           <%= fields_for( :tenant ) do |w| %>
           <div class="field">
-          <%= w.label :surname, 'Organization' %>
-          <span class='description'>(Unique name for your group or organization for the new account)</span>
-          <%= w.text_field :name, required: true, class: "" %>
+          <%= w.label :surname, '*Organization', class: "organization"%>
+          <%= w.text_field :name, required: true, class: "input", autofocus: true %>
+          <span class='description'> If you want to participate in more than one project this is mandatory</span>
           </div>
           <% end %>
           <div class="field">
 			<div class="control">
-			 <%= f.input :name, required: true, autofocus: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+			 <%= f.input :name, required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
 			</div>
 		  </div>
 
