--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,7 @@
 
           <%= fields_for( :tenant ) do |w| %>
           <div class="field">
-          <%= w.label :surname, '*Organization', class: "organization"%>
+          <%= w.label :name, '*Organization', class: "organization"%>
           <%= w.text_field :name, required: true, class: "input", autofocus: true %>
           <span class='description'> If you want to participate in more than one project this is mandatory</span>
           </div>
