--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                 <a class="navbar-link user-thumb">
                   <h1>My account</h1>
                 </a>
-              
+
 
                 <div class="navbar-dropdown">
                   <%= link_to "Edit my account",edit_user_registration_path, class:"navbar-item" %>
@@ -70,7 +70,7 @@
                   <% end %>
                   <%= link_to "My account","#", class:"navbar-item" %>
                   <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
-                  <%= link_to "Add new member", new_member_path, class:"navbar-item" %>
+                  <%= link_to "Invite friend", new_member_path, class:"navbar-item" %>
                 </div>
               </div>
               <% else %>
