--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -5,34 +5,7 @@
 				<h2 class="title is-2">Invite members</h2>
 
         <%= form_for(@member, :html => { :class => "form login" }) do |f| %>
-        <% if @member.errors.any? %>
-          <div id="error_expl" class="message is-danger">
-            <div class="message-header">
-              <h3><%= pluralize(@member.errors.count, "error") %> prohibited this Member from being saved:</h3>
-            </div>
-            <div class="message-body">
-              <ul>
-                <% @member.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-                <% end %>
-              </ul>
-            </div>
-          </div>
-        <% end %>
-        <% if @user.errors.any? %>
-          <div id="error_expl" class="message is-danger">
-            <div class="message-header">
-              <h3><%= pluralize(@user.errors.count, "error") %> prohibited this Member from being saved:</h3>
-            </div>
-            <div class="message-body">
-              <ul>
-                <% @user.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-                <% end %>
-              </ul>
-            </div>
-          </div>
-       <% end %>
+        <%= render 'shared/errors', obj: @user%>
 
          <%= fields_for( :user ) do |w| %>
             <div class="field">
@@ -43,7 +16,7 @@
          <% end %>
 
          <div class="field">
-           <%= f.label :first_name, "*Name", class: "organization" %>
+           <%= f.label :first_name, "*Name", class: "organization label" %>
            <%= f.text_field :first_name, :class => "input", required: true %>
          </div>
 
