--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
           <%= link_to 'News', "#" , class:"navbar-item" %>
           <%= link_to 'Forum', "#" , class:"navbar-item" %>
           <%= link_to 'Jobs', "#" , class:"navbar-item" %>
-          <%= link_to 'Scores', "#" , class:"navbar-item" %>
+          <%= link_to 'Projects', home_projects_index_path%>
+
+
         </div>
 
         <div class="navbar-end">
@@ -64,13 +66,15 @@
 
 
                 <div class="navbar-dropdown">
-                  <%= link_to "Edit my account",edit_user_registration_path, class:"navbar-item" %>
-                  <% if current_user%>
+                <% if !current_user.is_admin?%>
                   <%= link_to "New Category","#",  class:"navbar-item" %>
-                  <% end %>
+                <% end %>
+                <% if current_user%>
+                  <%= link_to "Edit my account",edit_user_registration_path, class:"navbar-item" %>
                   <%= link_to "My account","#", class:"navbar-item" %>
                   <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
                   <%= link_to "Invite friend", new_member_path, class:"navbar-item" %>
+                <% end %>
                 </div>
               </div>
               <% else %>
