--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,33 +1,27 @@
+<%- model_class = Project -%>
+<div class="page-header">
+  <h3><%= @project.title %></h3>
+  <h3><small>Organization - <%= tenant_name @project.tenant_id %></small></h3>
+</div>
 
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @project.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @project.description %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:tenant_id) %>:</strong></dt>
+  <dd><%= @project.tenant_id %></dd>
+</dl>
 
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
+<br />
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
-
-<p>
-  <strong>Expected completion date:</strong>
-  <%= @project.expected_completion_date %>
-</p>
-
-<p>
-  <strong>Tenant:</strong>
-  <%= @project.tenant %>
-</p>
 <%= link_to '< Back to Organization Home', root_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_tenant_project_path(project: @project, tenant: @project.tenant_id),
               :class => 'btn btn-default' %>
 <%= link_to 'Edit Project Users', users_tenant_project_path(tenant_id: @project.tenant_id, id: @project.id),
               :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                            tenant_project_path( @project.tenant_id, @project,),
-                            :method => 'delete',
-                            :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm",
-                            :default => 'Are you sure?')) },
-                            :class => 'btn btn-danger' %>
+<%= link_to "Destroy",tenant_project_path(@project.tenant_id, @project),
+              :method => 'delete',
+              data: { confirm: 'Are you sure?' } ,
+              :class => 'btn btn-danger' %>
