--- a/app/views/projects/users.html.erb
+++ b/app/views/projects/users.html.erb
@@ -14,7 +14,7 @@
       <tr>
         <td><%= project_user.email %></td>
         <td>
-          <% if !project_user.is_admin? %>
+          <% if project_user.is_admin? %>
             <%= link_to "Remove", user_project_path(project_user.user_projects.find_by(project_id: @project.id),
                                   tenant_id: @project.tenant_id),
                                   :method => :delete,
@@ -53,3 +53,5 @@
 
 <%= link_to 'Back', tenant_project_path(id: @project.id, tenant_id: @project.tenant_id),
                       :class => 'btn btn-primary' %>
+
+<%= link_to "Invite friend", new_member_path %>
